kubernetes/mini/apps/downloads/bazarr/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bazarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bazarr

  egress:
    - toEndpoints: # radarr
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints: # sonarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toFQDNs: # TODO: L7 policy
        - matchName: api.github.com            # update check
        - matchName: raw.githubusercontent.com # announcements
        # subtitle providers
        - matchName: opensubtitles.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
